--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/composition";
 @import "components/feature-box";
 
+@import "components/cards";
 @import "pages/home";
 
 @import "layout/header";
