--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -38,5 +38,9 @@ margin-top:-10rem;
   transform:skewY(7deg);
 
 }
-
+}
+.section-tours{
+  background-color:$color-grey-light-1;
+  padding:25rem 0 50rem 0;
+  
 }
