--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -57,6 +57,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
+  margin-bottom:2rem;
   background-image: linear-gradient(
     to right,
     $color-primary-light,
