--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -8,5 +8,11 @@
   margin-bottom: 4rem;
 }
 .u-margin-bottom-big {
-  margin-bottom: 8rem;
+  margin-bottom: 10rem;
+}
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+.u-margin-top-huge {
+  margin-top: 10rem;
 }
