--- a/src/sass/components/_stories.scss
+++ b/src/sass/components/_stories.scss
@@ -26,7 +26,7 @@ $gutter-horizontal: 6rem;
   width:75%;
   margin:0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, .2);
-  background-color: $color-white;
+  background-color: rgba($color-white, .6);
   border-radius:3px;
   padding:6rem;
   padding-left:9rem;
