--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "layout/grid";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
