--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -51,3 +51,25 @@ margin-top:-10rem;
   background-color: $color-grey-light-1;
   
 }
+.section-book{
+  padding:15rem 0;
+  background-image: linear-gradient($color-primary-light, $color-primary-dark);
+}
+
+.book{
+  background-image:linear-gradient(105deg, 
+  rgba($color-white, .9) 0%,
+  rgba($color-white, .9) 50%,
+   transparent 50%),
+  url(https://i.imgur.com/pliS6B3.jpg);
+  background-size:100%;
+  border-radius:3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+  height:50rem;
+
+  &__form{
+    width: 50%;
+    padding:6rem;
+  }
+}
