--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "layout/grid";
+
 
 @import "components/form";
 @import "components/bg-video";
@@ -16,7 +16,10 @@
 @import "components/feature-box";
 @import "components/stories";
 
+@import "layout/footer";
+@import "layout/header";
+@import "layout/grid";
+
 @import "components/cards";
 @import "pages/home";
 
-@import "layout/header";
